--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
