--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
