--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "react": "^18.0.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
